@@ -18,6 +18,20 @@ avatar: /img/avatar.jpg
 # Small icon of Your site | 站点小图标地址
 favicon: /img/avatar.jpg
 
+# Internationalization | 主题语言
+## Change Language in SITE's _config.yml | 在站点配置中切换语言
+## https://hexo.io/docs/internationalization.html
+## Available Languages: en, zh-Hans, zh-Hant-TW, zh-Hant-HK
+
+# Subdirectory | 子目录
+## If your site' url is 'http://yoursite.com/blog', set root_url as '/blog/'
+## 网站若存放在子目录，请按上面格式填写
+## https://hexo.io/docs/configuration.html#URL
+root_url:
+
+# Year of Site Creation | 网站成立年份
+since: 2016
+
 # Social info. Bar | 社交信息展示
 ## Keep "mailto:" in Email | 设置 Email 时保留 "mailto:"
 ## Encrypt email 加密邮件地址 http://ctrlq.org/encode/
