@@ -1,3 +1,6 @@
+v2016-04-24
+  * Update themes
+
 v2016-04-23
   * Hello summer of 2016
 
